--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
             opacity: 1;
         }
         #bio {
-            background: url('video/back.mp4') no-repeat center center/cover;
+            background: url('video/ssstik.io_1728506933758.mp4') no-repeat center center/cover;
             display: flex;
             align-items: center;
             justify-content: center;
         }
         #fohosting {
-            background: url('video/video.mp4') no-repeat center center/cover;
+            background: url('video/ssstik.io_1728506933758.mp4') no-repeat center center/cover;
         }
         .video-background {
             position: absolute;
@@ -225,7 +225,7 @@
     </div>
     <div class="content-container">
         <video class="video-background" autoplay muted loop>
-                <source src="video/video.mp4" type="video/mp4">
+                <source src="video/ssstik.io_1728506933758.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         <div id="bio" class="content active">           
