--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
             transform: translateX(-50%);
             transition: transform 0.5s ease;
         }
+       .content-conta {
+            display: flex;
+            height: calc(100vh - 60px);
+            width: 200%;
+            transform: translateX(-50%);
+            transition: transform 0.5s ease;
+       }
         .content {
             width: 50%;
             height: 100%;
@@ -223,7 +230,7 @@
     <div class="menu">
         <a href="#" id="bio-link" class="active">BIO</a>
     </div>
-    <div class="content-container">
+    <div class="content-conta">
         <video class="video-background" autoplay muted loop>
                 <source src="video/ssstik.io_1728506933758.mp4" type="video/mp4">
                 Your browser does not support the video tag.
