--- a/index.html
+++ b/index.html
@@ -46,17 +46,10 @@
         .content-container {
             display: flex;
             height: calc(100vh - 60px);
-            width: 100%;
-            transform: translateX(-50%);
-            transition: transform 0.5s ease;
-        }
-       .content-conta {
-            display: flex;
-            height: calc(100vh - 60px);
             width: 200%;
             transform: translateX(-50%);
             transition: transform 0.5s ease;
-       }
+        }
         .content {
             width: 50%;
             height: 100%;
@@ -230,7 +223,7 @@
     <div class="menu">
         <a href="#" id="bio-link" class="active">BIO</a>
     </div>
-    <div class="content-conta">
+    <div class="content-container">
         <video class="video-background" autoplay muted loop>
                 <source src="video/ssstik.io_1728506933758.mp4" type="video/mp4">
                 Your browser does not support the video tag.
